Updated to cover all the new config options.